--- a/src/pages/Developers.css
+++ b/src/pages/Developers.css
@@ -15,7 +15,7 @@
 }
 
 .dev-section {
-  margin-bottom: 1.5rem;
+  margin-bottom: 1rem;
 }
 
 .dev-section h2 {
